Kubernetes/Automation/Semaphore/yamls/ig-semaphore.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-semaphore-security
  namespace: semaphore
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-semaphore-websecure
  namespace: semaphore
  annotations:
    gethomepage.dev/href: "https://cyberchef.domain.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Cyberchef"
    gethomepage.dev/group: DevOps
    gethomepage.dev/icon: cyberchef.svg
    gethomepage.dev/app: cyberchef # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: "Cyberchef"
    #gethomepage.dev/showStats: "true"
    #gethomepage.dev/widget.type: "emby"
    #gethomepage.dev/widget.url: "https://emby.example.com"
    #gethomepage.dev/pod-selector: ""
    #gethomepage.dev/weight: 10 # optional
    #gethomepage.dev/instance: "public" # optional
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`semaphore.domain.com`)
      services:
        - name: semaphore-service
          port: 3000
          serversTransport: traefik-semaphore-transport
      middlewares:
        - name: traefik-semaphore-security
  tls:
    secretName: semaphore-domain-com
    options:
      name: traefik-semaphore-tlsoptions
