Kubernetes/Automation/Semaphore/yamls/semaphoreui.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: semaphoreui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphoreui
  namespace: semaphoreui 
  labels:
    app: semaphoreui
    app.kubernetes.io/name: semaphoreui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semaphoreui 
  template:
    metadata:
      labels:
        app: semaphoreui
        app.kubernetes.io/name: semaphoreui
    spec:
      volumes:
      - name: semaphoreui-config
        persistentVolumeClaim: 
          claimName: semaphoreui-config-pvc
      - name: semaphoreui-data
        persistentVolumeClaim: 
          claimName: semaphoreui-data-pvc
      containers:
        - image: semaphoreui/semaphore:latest
          name: semaphoreui 
          ports:
            - containerPort: 3000
#          resources:
#            limits:
#              cpu: 1000m
#              memory: 2Gi
#            requests:
#              cpu: 500m
#              memory: 1Mi
          volumeMounts:
            - mountPath: /var/lib/semaphore
              name: semaphoreui-data
            - mountPath: /etc/semaphore
              name: semaphoreui-config
---
apiVersion: v1
kind: Service
metadata:
  name: semaphoreui
  namespace: semaphoreui
  labels:
    app: semaphoreui
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: semaphoreui
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-semaphoreui-https-redirect
  namespace: semaphoreui
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-semaphoreui-security
  namespace: semaphoreui
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
    customFrameOptionsValue: sameorigin
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-semaphoreui-websecure
  namespace: semaphoreui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`semaphoreui.domain.com`)
      kind: Rule
      services:
        - name: semaphoreui
          port: 3000
          serversTransport: traefik-semaphoreui-transport
      middlewares:
        - name: traefik-semaphoreui-security
  tls:
    secretName: semaphoreui-domain-com
    options:
      name: traefik-semaphoreui-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-semaphoreui-web
  namespace: semaphoreui
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`semaphoreui.domain.com`)
      kind: Rule
      services:
        - name: semaphoreui
          port: 3000
      middlewares:
        - name: traefik-semaphoreui-https-redirect
